src/humangov-california.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-python-app-california
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-python-app-california
  template:
    metadata:
      labels:
        app: humangov-python-app-california
    spec:
      serviceAccountName: humangov-pod-execution-role
      containers:
      - name: humangov-python-app-california
        image: 976193221400.dkr.ecr.us-east-1.amazonaws.com/humangov-app:517432d7fbe9b29fcb08b034d9125e061cd43090 
---
apiVersion: v1
kind: Service
metadata:
  name: humangov-python-app-service-california
spec:
  type: ClusterIP
  selector:
    app: humangov-python-app-california
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-nginx-reverse-proxy-california
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-nginx-reverse-proxy-california
  template:
    metadata:
      labels:
        app: humangov-nginx-reverse-proxy-california
    spec:
      containers:
      - name: humangov-nginx-reverse-proxy-california
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: humangov-nginx-config-california-vol
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: humangov-nginx-config-california-vol
        configMap:
          name: humangov-nginx-config-california
---
apiVersion: v1
kind: Service
metadata:
  name: humangov-nginx-service-california
spec:
  selector:
    app: humangov-nginx-reverse-proxy-california
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
