src/humangov-nevada.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-python-app-nevada
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-python-app-nevada
  template:
    metadata:
      labels:
        app: humangov-python-app-nevada
    spec:
      serviceAccountName: humangov-pod-execution-role
      containers:
      - name: humangov-python-app-nevada
        image: 976193221400.dkr.ecr.us-east-1.amazonaws.com/humangov-app:latest
---
apiVersion: v1
kind: Service
metadata:
  name: humangov-python-app-service-nevada
spec:
  type: ClusterIP
  selector:
    app: humangov-python-app-nevada
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-nginx-reverse-proxy-nevada
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-nginx-reverse-proxy-nevada
  template:
    metadata:
      labels:
        app: humangov-nginx-reverse-proxy-nevada
    spec:
      containers:
      - name: humangov-nginx-reverse-proxy-nevada
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: humangov-nginx-config-nevada-vol
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: humangov-nginx-config-nevada-vol
        configMap:
          name: humangov-nginx-config-nevada
---
apiVersion: v1
kind: Service
metadata:
  name: humangov-nginx-service-nevada
spec:
  selector:
    app: humangov-nginx-reverse-proxy-nevada
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
