src/humangov-ingress-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: humangov-python-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: frontend
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:976193221400:certificate/3890a155-d2c6-4533-8583-e7c31c885cb7
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: california.humangovtjh.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: humangov-nginx-service-california
                port:
                  number: 80
    - host: florida.humangovtjh.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: humangov-nginx-service-florida
                port:
                  number: 80
    - host: staging.humangov.click
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: humangov-nginx-service-staging
              port:
                number: 80
